Bug 427760 - KPA git master crashes if videothumbnails of more than one video at once are advanced by crtl+"+"
Summary: KPA git master crashes if videothumbnails of more than one video at once are ...
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Thumbnail Viewer (other bugs)
Version First Reported In: GIT master
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-15 14:24 UTC by Andreas Schleth
Modified: 2021-01-28 22:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KDE crash report (14.36 KB, text/plain)
2020-10-15 14:24 UTC, Andreas Schleth
Details
screenshot1 (86.17 KB, image/jpeg)
2020-10-31 13:23 UTC, Andreas Schleth
Details
screenshot2 (87.31 KB, image/jpeg)
2020-10-31 13:24 UTC, Andreas Schleth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schleth 2020-10-15 14:24:17 UTC
Created attachment 132387 [details]
KDE crash report

SUMMARY

STEPS TO REPRODUCE
0. You nee a DB with a few videos with proper video thumbnails to start with.
1. select two or more videos with video thumbnails in the browser (can't do this with the demo as it only has one video).
2. click crtl-"+" or crtl-"-" to select the next or the previous thumbnail as the static thumbnail image

OBSERVED RESULT
3. crash.

EXPECTED RESULT
no crash and the next image should be the static image.

Funny, enough the same operation seems to work sometimes. When selecting only one video the operation seems to work. I just tested again and it worked a few times with two videos selected and then crashed again when dealing with two other videos. Each of which could be advanced one by one without crash.

Dr. Konqui has provided a crash report (attachment).

KPA v5.7.0-25-gd2af41aa
KDE Frameworks 5.71.0
Qt 5.12.7 (kompiliert gegen 5.12.7)
Das xcb Fenstersystem
Comment 1 Johannes Zarl-Zierl 2020-10-15 23:08:16 UTC
Thanks for the bug report, and special thanks for running kphotoalbum with assertions enabled!
I could reproduce this by copying additional video files to the demo database.

The stack trace shows the following function as the culprit:

    DB::FileName nextExistingImage(const DB::FileName &fileName, int frame, int direction)
    {
            for (int i = 1; i < 10; ++i) {
            const int nextIndex = (frame + 10 + direction * i) % 10;
            const DB::FileName file = BackgroundJobs::HandleVideoThumbnailRequestJob::frameName(fileName, nextIndex);
            if (file.exists())
                return file;
        }
        Q_ASSERT(false && "We should always find at least the current frame");
        return DB::FileName();
    }

I'll have to evaluate the conditions that can lead to this code path in detail...
Comment 2 Andreas Schleth 2020-10-30 20:42:35 UTC
I just compiled the latest git master (v5.7.0-31-g17fb539c) and the bug persists.
Comment 3 Johannes Zarl-Zierl 2020-10-30 23:46:34 UTC
Git commit f54a5e39fadb07ee85f380e4589191b649def858 by Johannes Zarl-Zierl.
Committed on 30/10/2020 at 23:38.
Pushed by johanneszarl into branch 'master'.

Remove incorrect assertion.

Apparently, it *is* possible for the nextExistingImage() function in
UpdateVideoThumbnail.cpp to not find a next frame.

M  +3    -1    ImageManager/ThumbnailCache.cpp
M  +13   -2    MainWindow/UpdateVideoThumbnail.cpp

https://invent.kde.org/graphics/kphotoalbum/commit/f54a5e39fadb07ee85f380e4589191b649def858
Comment 4 Johannes Zarl-Zierl 2020-10-30 23:49:50 UTC
After checking the execution paths leading up to this function I'm confident that the assertion can be removed without harm.
Comment 5 Andreas Schleth 2020-10-31 13:23:24 UTC
Created attachment 132910 [details]
screenshot1

...before
Comment 6 Andreas Schleth 2020-10-31 13:24:54 UTC
Created attachment 132911 [details]
screenshot2

...after
Comment 7 Andreas Schleth 2020-10-31 13:25:56 UTC
Hi Johannes, 
I can confirm 2 things:
1. The crash is gone in v5.7.0-34-gf2dd467a - this is progress!
2. It is not only possible that KPA misses the next frame. It happens in ~50% of the selected thumbnails. See attached screenshots before and after I hit crtl-+ a few times on a selection of videos. Only the videos with the red dot show a different image. The others remain as before.

To my untrained eye it looks like something of a timing/syncing bug between concurrent threads. Depending on the actual selection other videos get skipped.

Should I file a new bug or would you rather reopen this one here?
I agree, that the current state of affairs is no show stopper anymore, but still ...
Best regards, Andreas
Comment 8 Johannes Zarl-Zierl 2020-10-31 13:58:17 UTC
Let's keep the two issues in the same bug - so far it seems they are two sides of the same coin...
Comment 9 Johannes Zarl-Zierl 2021-01-27 23:25:24 UTC
Hi Andreas,

I wanted to revisit this bug and tried to reproduce it, but to no avail. Can you check that the bug persists in the current git master?

Thanks,
  Johannes
Comment 10 Andreas Schleth 2021-01-28 19:13:39 UTC
Hi Johannes,

thanks for looking after this.

I just built the latest git master (v5.7.0-178-g096dbec0) and the bug seems to be gone indeed. I tested with various sets of videothumbnails: all changed in sync and no crash.

So, I guess, you could just close this.
I will keep this release in "production" for the time being.

Best regards, Andreas
Comment 11 Johannes Zarl-Zierl 2021-01-28 22:08:31 UTC
Hi Andreas,

Thanks for the feedback!

Cheers,
  Johannes