Remove incorrect assertion.

Apparently, it *is* possible for the nextExistingImage() function in
UpdateVideoThumbnail.cpp to not find a next frame.

BUG: 427760